--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "nuxt-portfolio",
   "version": "1.0.0",
+  "engines": {
+    "node": "15.x"
+  },
   "private": true,
   "scripts": {
     "dev": "DEBUG=PORTFOLIO* nuxt-ts",
