--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "generate": "nuxt-ts generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest",
+    "sls": "./node_modules/.bin/serverless"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/pwa": "^3.0.2",
     "@nuxtjs/style-resources": "^1.0.0",
+    "aws-serverless-express": "^3.4.0",
     "core-js": "^3.6.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "nuxt-start": "^2.14.10",
+    "serverless-http": "^2.7.0",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vuetify": "^2.3.19",
@@ -48,6 +51,9 @@
     "nuxt": "^2.14.10",
     "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
+    "serverless": "^2.21.1",
+    "serverless-dotenv-plugin": "^3.1.0",
+    "serverless-offline": "^6.8.0",
     "ts-jest": "^26.4.1",
     "vue-jest": "^3.0.4",
     "vuetify-loader": "^1.6.0"
