--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
     "generate": "nuxt-ts generate",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --ext .ts,.js,.vue .",
     "lint": "npm run lint:js",
     "test": "jest",
     "sls": "./node_modules/.bin/serverless"
@@ -34,7 +34,6 @@
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
     "@nuxt/typescript-build": "^2.0.4",
-    "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
@@ -45,6 +44,7 @@
     "babel-jest": "^26.5.0",
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-vue": "^7.5.0",
     "fibers": "^5.0.0",
     "jest": "^26.5.0",
     "node-sass": "^5.0.0",
