--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
       - npm run lint
       # TODO: uncomment if there are integration or unit tests to run
       # - npm test
-      - npm run sls -- deploy --stage dev --noDeploy
+      - npm run sls -- deploy --stage $sls_stage --noDeploy
   build:
     commands:
       - npm run sls -- deploy --stage dev
