--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,8 @@ phases:
       - npm run sls -- deploy --stage $sls_stage --noDeploy
   build:
     commands:
-      - npm run sls -- deploy --stage dev
+      - npm run build
+      - npm run sls -- deploy --stage $sls_stage
   post_build:
     commands:
       - cat ./.serverless/serverless-state.json
